<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_grapher"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_grapher"/>
    <item
        android:id="@+id/action_devices"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_devices"/>
    
    
    <item
        android:id="@+id/action_calibrate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_calibrate"/>
    <item
        android:id="@+id/action_logs"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logs"/>
    <!-- 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	-->

</menu>
