<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeviceControlActivity" >

    <TextView
        android:id="@+id/ble_device_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/ble_device_name" />

    <TextView
        android:id="@+id/ble_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ble_device_name_label"
        android:layout_toRightOf="@+id/ble_device_name_label"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/ble_device_addr_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ble_device_name_label"
        android:layout_below="@+id/ble_device_name_label"
        android:text="@string/ble_device_addr" />

    <TextView
        android:id="@+id/ble_device_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ble_device_addr_label"
        android:layout_alignBottom="@+id/ble_device_addr_label"
        android:layout_toRightOf="@+id/ble_device_addr_label"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/ble_bond_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ble_device_addr_label"
        android:layout_below="@id/ble_device_addr_label"
        android:text="@string/ble_bond_status" />

    <TextView
        android:id="@+id/ble_bond_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ble_bond_status_label"
        android:layout_alignBottom="@+id/ble_bond_status_label"
        android:layout_toRightOf="@+id/ble_bond_status_label"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/device_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ble_bond_status"
        android:text="@string/ble_connected"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_green_dark" />

    <TextView
        android:id="@+id/device_not_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/device_connected"
        android:layout_alignBottom="@+id/device_connected"
        android:text="@string/ble_not_connected"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/message_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/device_connected"
        android:layout_below="@+id/device_connected"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/send_message"
        android:ems="10"
        android:hint="@string/message_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/last_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message_box"
        android:layout_below="@+id/send_message"
        android:layout_marginTop="24dp"
        android:text="@string/last_data"
        android:labelFor="@+id/last_data" />

    <ScrollView
        android:id="@+id/data_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_data_label"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/last_data_label"
        android:layout_marginTop="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/last_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine|none" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/message_box"
        android:layout_alignBottom="@+id/message_box"
        android:layout_alignParentRight="true"
        android:onClick="sendMessage"
        android:text="@string/send" />

</RelativeLayout>
